# CANRS485_G473

./: .clangd  .gitignore  .mxproject  AGENTS.md  CANRS485_G473.ioc  CMakeLists.txt  README.md  STM32G473XX_FLASH.ld
Core/Inc/: app.h  app_can_decode.h  app_can_io.h  app_command_io.h  app_command_parser.h  app_config.h  app_fault.h  app_state.h  app_telemetry.h  app_utils.h  fdcan.h  main.h  mcp2518fd.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
Core/Src/: app.c  app_can_decode.c  app_can_io.c  app_command_io.c  app_command_parser.c  app_fault.c  app_telemetry.c  app_utils.c  fdcan.c  gpio.c  main.c  mcp2518fd.c  spi.c  stm32g4xx_it.c  usart.c
DOC/: CubeMX配置.md  MCP2518FD驱动.md  todo.md  电路信息.md
REFERENCE/: FS_Datalogger_Status_v0.2.dbc  IVT-S-500-U3-I-CAN1协议文档.md  Vehicle_CanA.dbc  Vehicle_CanB(1).dbc  Vehicle_CanB.dbc  cana_canb_protocol.md  ivt_s_v3_intel.dbc  pcan_ivt_tool.py  新主控 CAN 通讯协议.md  旧主控 CAN 通讯协议.md
REFERENCE/protobuf-master/: DTU_DEBUG_GUIDE.md  GRAFANA_GUIDE.md  PROTO_GUIDE.md  README.md  README_local_sim.md  STM32_GUIDE.md  fsae_telemetry_pb2.py  local_sim2.py  其他信息.md  服务器文件.md
REFERENCE/protobuf-master/server_config/: 常用命令.md
REFERENCE/protobuf-master/server_config/protos/: fsae_telemetry.options  fsae_telemetry_v2.options
REFERENCE/protobuf-master/server_config/telegraf/: telegraf.conf
REFERENCE/protobuf-master/stm32_code/: fsae_telemetry.pb.c  fsae_telemetry.pb.h  fsae_telemetry.proto
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
tests/: CMakeLists.txt  test_app_core.c
tests/stubs/: main.h
